--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,10 @@
 overwrite: true
 schema: "http://localhost:4000/api/"
 documents:
-  - "src/**/*.tsx"
-  - "src/**/*.ts"
+#  - "src/**/*.tsx"
+#  - "src/**/*.ts"
   - "src/**/*.graphql"
+
 generates:
   src/http/generated.ts:
     plugins:
